--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore ./FinancePlatform
+      run: dotnet restore .
 
     - name: Build
       run: dotnet build ./FinancePlatform --no-restore --configuration Release
