--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,14 @@ jobs:
       run: dotnet restore .
 
     - name: Build
-      run: dotnet build ./FinancePlatform --no-restore --configuration Release
+      run: dotnet build . --no-restore --configuration Release
 
     - name: Initialize Database Schema
       run: |
         /opt/mssql-tools/bin/sqlcmd -S localhost,1433 -U sa -P Your_password123 -d master -i FinancePlatform/Infrastructure/Database/schema.sql
 
     - name: Run Tests
-      run: dotnet test ./tests --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
-
+      run: dotnet test . --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
 
     - name: Publish Test Results
       uses: actions/upload-artifact@v3
