--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,29 +26,29 @@ jobs:
           - 15672:15672
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.x'
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'
 
-    - name: Restore dependencies
-      run: dotnet restore .
+      - name: Restore dependencies
+        run: dotnet restore .
 
-    - name: Build
-      run: dotnet build . --no-restore --configuration Release
+      - name: Build
+        run: dotnet build . --no-restore --configuration Release
 
-    - name: Initialize Database Schema
-      run: |
-        /opt/mssql-tools/bin/sqlcmd -S localhost,1433 -U sa -P Your_password123 -d master -i FinancePlatform/Infrastructure/Database/schema.sql
+      - name: Initialize Database Schema
+        run: |
+          /opt/mssql-tools/bin/sqlcmd -S localhost,1433 -U sa -P Your_password123 -d master -i FinancePlatform/Infrastructure/Database/schema.sql
 
-    - name: Run Tests
-      run: dotnet test . --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
+      - name: Run Tests
+        run: dotnet test . --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
 
-    - name: Publish Test Results
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: **/TestResults/*.trx
+      - name: Publish Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: "**/TestResults/*.trx"
