--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,16 @@ jobs:
       - name: Build
         run: dotnet build FinancePlatform.API/FinancePlatform.API.csproj --no-restore --configuration Release
 
+      - name: Install SQL Server tools
+        run: |
+          sudo apt-get update
+          sudo ACCEPT_EULA=Y apt-get install -y mssql-tools unixodbc-dev
+          echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
+          source ~/.bashrc
+
       - name: Initialize Database Schema
         run: |
-          docker exec $(docker ps -q -f ancestor=mcr.microsoft.com/mssql/server:2022-latest) \
-          /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P Your_password123 -d master -i /FinancePlatform/Infrastructure/Database/schema.sql
+          /opt/mssql-tools/bin/sqlcmd -S localhost,1433 -U sa -P Your_password123 -d master -i FinancePlatform/Infrastructure/Database/schema.sql
 
       - name: Run Tests
         run: dotnet test FinancePlatform.API/FinancePlatform.API.csproj --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
